# freeletics-python

./: .gitignore  .python_version  CONTRIBUTING.md  README.md  endpoints.csv  noxfile.py  pyproject.toml  requirements.txt  setup.py
docs/: endpoints.csv
docs/source/: conf.py  index.rst
examples/: get_all_performed_trainings.py
freeletics/: __init__.py  _api.py  _auth.py  _client.py  _constants.py  _models.py  client.py
src/freeletics/: __init__.py  _api.py  _auth.py  _client.py  _models.py  _version.py
tests/: __init__.py  test_main.py
